--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       </div>
       <form class="form">
         <div class="amount">
-          <label>Enter Amount</label>
+          <label>Enter Your Amount</label>
           <input type="number" placeholder="Enter amount" id="userInput" />
         </div>
         <div class="dropDown">
@@ -38,7 +38,7 @@
             </div>
           </div>
         </div>
-        <div class="message">1 USD = 100 BDT</div>
+        <div class="message">Your convertion will be here</div>
         <button id="xngBtn" type="submit">Exchange</button>
       </form>
     </div>
