--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <link rel="shortcut icon" href="Asset/Favicon.svg" type="image/x-icon" />
+    <title>Currency Converter</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
