--- a/index.html
+++ b/index.html
@@ -47,6 +47,6 @@
       src="https://kit.fontawesome.com/74b658eae7.js"
       crossorigin="anonymous"
     ></script>
-    <script src="script.js"></script>
+    <script src="script.js" type="module"></script>
   </body>
 </html>
